--- a/src/main/pages/introduce.html
+++ b/src/main/pages/introduce.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>折多多</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="/src/main/css/introduce.css" />
-    <script src="/src/main/js/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="/hello-ghpages/src/main/css/introduce.css" />
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
 </head>
 
 <body>
@@ -23,41 +23,41 @@
                 <li class="">400≤超高客单</li>
             </ul>
             <div class="img_content">
-                <div style="display: block;"><img src="/src/main/images/dkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/zdkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/zkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/gkd.jpg" alt="Alternate Text"></div>
-                <div style="display: none;"><img src="/src/main/images/cgkd.jpg" alt="Alternate Text"></div>
+                <div style="display: block;"><img src="/hello-ghpages/src/main/images/dkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/zdkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/zkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/gkd.jpg" alt="Alternate Text"></div>
+                <div style="display: none;"><img src="/hello-ghpages/src/main/images/cgkd.jpg" alt="Alternate Text"></div>
             </div>
         </div>
     </div>
     <div class="part1">
         <h1>折扣试用能为你带来哪些好处？</h1>
         <ul>
-            <li><img src="/src/main/images/ssqz.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/ssqz.png" alt="Alternate Text">
                 <p>搜索权重</p>
             </li>
-            <li><img src="/src/main/images/rqqz.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/rqqz.png" alt="Alternate Text">
                 <p>人气权重</p>
             </li>
-            <li><img src="/src/main/images/zhpm.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/zhpm.png" alt="Alternate Text">
                 <p>综合排名</p>
             </li>
-            <li><img src="/src/main/images/syll.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/syll.png" alt="Alternate Text">
                 <p>首页流量</p>
             </li>
         </ul>
         <ul>
-            <li><img src="/src/main/images/dpcj.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/dpcj.png" alt="Alternate Text">
                 <p>店铺层级</p>
             </li>
-            <li><img src="/src/main/images/jscb.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/jscb.png" alt="Alternate Text">
                 <p>节省成本</p>
             </li>
-            <li><img src="/src/main/images/qzmj.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/qzmj.png" alt="Alternate Text">
                 <p>潜在买家</p>
             </li>
-            <li><img src="/src/main/images/ppxc.png" alt="Alternate Text">
+            <li><img src="/hello-ghpages/src/main/images/ppxc.png" alt="Alternate Text">
                 <p>品牌宣传</p>
             </li>
         </ul>
@@ -77,15 +77,15 @@
             <li class=""></li>
         </ol>
         <div class="part2_content">
-            <div style="display: block;"><img src="/src/main/images/lcs.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/fhje.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/lc.png" alt="Alternate Text"></div>
-            <div style="display: none;"><img src="/src/main/images/xdfb.png" alt="Alternate Text"></div>
+            <div style="display: block;"><img src="/hello-ghpages/src/main/images/lcs.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/fhje.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/lc.png" alt="Alternate Text"></div>
+            <div style="display: none;"><img src="/hello-ghpages/src/main/images/xdfb.png" alt="Alternate Text"></div>
         </div>
     </div>
     <div class="part3">
         <h1>如何发布折扣试用？</h1>
-        <img src="/src/main/images/zksy.jpg" alt="Alternate Text">
+        <img src="/hello-ghpages/src/main/images/zksy.jpg" alt="Alternate Text">
     </div>
     <div class="part4">
         <h1>常见问题解答</h1>
@@ -106,7 +106,7 @@
                 <div class="left_content">
                     <h3>Q：活动推广期间，店铺宝贝价格有变动或其他特殊原因需要暂停活动怎么操作？</h3>
                     <p>A：当因为特殊原因需要暂停活动或提前结束时，可在活动管理提交结算申请或联系专员暂停。如未出现该按钮，可等所有中奖用户填完订单号后提交或联系专员处理。结算活动后，剩余份数对应的担保金及高级服务费用等会直接退款到您的账号余额。</p>
-                </div> 
+                </div>
                 <div class="left_content">
                     <h3>Q：用户在试用过程中，如何实时查看用户操作行为轨迹？</h3>
                     <p>A：可在商家管理中心活动管理中查看详情，用户每一步试用流程均有操作凭证，可查看完成时间、操作截图、购买订单号、评价截图等等信息。</p>
@@ -132,23 +132,23 @@
                 <div class="right_content">
                     <h3>Q：没发布过折扣试用，如何设置合理的返款价以达到我的推广需求？</h3>
                     <p>A：亲如果是第一次发布活动，可以先设置1折，份数可以适当少一些。看申请情况再对新的活动进行折扣调整。这样就能确定该宝贝的合理返款价了哦。</p>
-                </div> 
+                </div>
             </div>
         </div>
         <div class="part4_btn">
-            <a href="/src/main/pages/discounts.html" target="_blank">发布折扣试用&gt;</a>
+            <a href="/hello-ghpages/src/main/pages/discounts.html" target="_blank">发布折扣试用&gt;</a>
         </div>
     </div>
 </body>
 <script>
-    $(function () {
-        $('.total_content ul li').hover(function () {
+    $(function() {
+        $('.total_content ul li').hover(function() {
             $(this).addClass('actives').siblings().removeClass('actives');
             var index = $(this).index();
             $(".img_content > div").eq(index).show(500).siblings().hide(500);
         })
 
-        $(".part2 ul li").hover(function () {
+        $(".part2 ul li").hover(function() {
             $(this).addClass("act_part2").siblings().removeClass("act_part2");
             var index = $(this).index();
             $(".part2 > ol li").eq(index).addClass("act_part2").siblings().removeClass("act_part2");
