--- a/src/main/pages/login.html
+++ b/src/main/pages/login.html
@@ -7,19 +7,19 @@
     <meta name="Keywords" content="折多多,折多多官方app下载,折多多APP">
     <meta name="Description" content="折多多官方APP：3000多万人都在用的网购省钱工具。消费有收益，创业大平台，折多多邀请码:15515500039，注册自动升级超级会员，快来加入到折多多大家庭吧！">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="/src/main/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/src/main/css/owl.carousel.css">
-    <link rel="stylesheet" href="/src/main/css/main.css">
-    <link rel="stylesheet" href="/src/main/css/responsive.css">
-    <link rel="stylesheet" href="/src/main/css/login.css">
-    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/src/main/css/person.css">
-    <link rel="stylesheet" href="/src/main/css/style.css">
-    <script src="/src/main/js/jquery-1.6.2.min.js"></script>
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/owl.carousel.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/responsive.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/login.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/style.css">
+    <script src="/hello-ghpages/src/main/js/jquery-1.6.2.min.js"></script>
     <script>
         var $162 = $;
     </script>
-    <script src="/src/main/js/Validform_v5.3.2.js"></script>
+    <script src="/hello-ghpages/src/main/js/Validform_v5.3.2.js"></script>
 </head>
 
 <body>
@@ -62,11 +62,11 @@
                 <div class="login-content">
                     <form id="loginLogin">
                         <div class="login-input">
-                            <input type="text" style="background:url(/src/main/images/icon_01.jpg)no-repeat 3px 6px" placeholder="账号" datatype="*" nullmsg="账号不能为空" class="login-name" id="login_name">
+                            <input type="text" style="background:url(/hello-ghpages/src/main/images/icon_01.jpg)no-repeat 3px 6px" placeholder="账号" datatype="*" nullmsg="账号不能为空" class="login-name" id="login_name">
                             <span class="Validform_checktip"></span>
                         </div>
                         <div class="login-input">
-                            <input type="password" style="background:url(/src/main/images/icon_02.jpg)no-repeat 3px 6px" placeholder="密码" datatype="*" nullmsg="密码不能为空" class="login-pwd" id="login_pwd">
+                            <input type="password" style="background:url(/hello-ghpages/src/main/images/icon_02.jpg)no-repeat 3px 6px" placeholder="密码" datatype="*" nullmsg="密码不能为空" class="login-pwd" id="login_pwd">
                             <span class="Validform_checktip"></span>
                         </div>
                         <button class="login-sumbit" onclick="login()">登陆</button>
@@ -87,14 +87,14 @@
             </div>
         </div>
     </div>
-    <script src="/src/main/js/jquery.min.js"></script>
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
     <script>
         var $jq = $;
     </script>
-    <script src="/src/main/layui/layui.js"></script>
-    <script src="/src/main/js/fancybox.pack.js"></script>
-    <script src="/src/main/js/carousel.min.js"></script>
-    <script src="/src/main/js/main.js"></script>
+    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <script src="/hello-ghpages/src/main/js/fancybox.pack.js"></script>
+    <script src="/hello-ghpages/src/main/js/carousel.min.js"></script>
+    <script src="/hello-ghpages/src/main/js/main.js"></script>
     <script type="text/javascript">
         var wdwidth = $jq(document).width()
         if (wdwidth > 769) {
@@ -106,19 +106,19 @@
         }
 
         function toregister() {
-            window.location.href = "/src/main/pages/register.html";
+            window.location.href = "/hello-ghpages/src/main/pages/register.html";
         }
 
         function registering() {
-            window.location.href = "/src/main/pages/register.html";
+            window.location.href = "/hello-ghpages/src/main/pages/register.html";
         }
 
         function tologin() {
-            window.location.href = "/src/main/pages/login.html";
+            window.location.href = "/hello-ghpages/src/main/pages/login.html";
         }
 
         function firstPage() {
-            window.location.href = "/index.html";
+            window.location.href = "/hello-ghpages/index.html";
         }
 
         function login() {
@@ -129,7 +129,7 @@
                 var layer = layui.layer;
                 layer.msg('登陆成功');
             });
-            window.location.href = "/src/main/pages/person.html";
+            window.location.href = "/hello-ghpages/src/main/pages/person.html";
             layui.use('element', function() {
                 var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
                 //监听导航点击
