--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>折多多</title>
-    <link rel="stylesheet" href="/src/main/css/main.css">
-    <link rel="stylesheet" href="/src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="/src/main/css/person.css">
-    <link rel="stylesheet" href="/src/main/css/adversting.css">
-    <link rel="stylesheet" href="/src/main/css/iconfont.css">
-    <script src="/src/main/js/jquery.min.js"></script>
-    <script src="/src/main/layui/layui.js"></script>
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/adversting.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/iconfont.css">
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
+    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
 </head>
 <style>
     .right_person {
@@ -36,9 +36,9 @@
                 <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="/index.html" onclick="firstPage()" title="折多多">首页</a></li>
-                        <li><a href="/src/main/pages/register.html">注册</a></li>
-                        <li><a href="/src/main/pages/login.html">登陆</a></li>
+                        <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
+                        <li><a href="/hello-ghpages/src/main/pages/register.html">注册</a></li>
+                        <li><a href="/hello-ghpages/src/main/pages/login.html">登陆</a></li>
                         <!--
 
 <li><a href="#overview">花生日记是什么</a></li>
@@ -58,39 +58,39 @@
         <div class="Sj-person">
             <div class="left-person">
                 <div class="first_person">
-                    <a class="first_person_a" href="/src/main/pages/person.html"> 个人中心首页</a>
+                    <a class="first_person_a" href="/hello-ghpages/src/main/pages/person.html"> 个人中心首页</a>
                 </div>
                 <ul class="layui-nav layui-nav-tree" lay-filter="test">
                     <li class="layui-nav-item ">
                         <a href="javascript:;">精选试用管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/src/main/pages/adversting.html">发布活动</a></dd>
-                            <dd><a href="/src/main/pages/activities.html">全部活动</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/adversting.html">发布活动</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/activities.html">全部活动</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;">折扣试用管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/src/main/pages/introduce.html">模式介绍</a></dd>
-                            <dd><a href="/src/main/pages/discounts.html">发布活动</a></dd>
-                            <dd><a href="/src/main/pages/disactive.html">全部活动</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/introduce.html">模式介绍</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/discounts.html">发布活动</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/disactive.html">全部活动</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;">我的账户</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/src/main/pages/management.html">店铺管理</a></dd>
-                            <dd><a href="/src/main/pages/putforward.html">提现/账户明细</a></dd>
-                            <dd><a href="/src/main/pages/accountnumber.html">我的提现账号</a></dd>
-                            <dd><a href="/src/main/pages/safey.html">账户安全</a></dd>
-                            <dd><a href="/src/main/pages/recharge.html">账户充值</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/management.html">店铺管理</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/putforward.html">提现/账户明细</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/accountnumber.html">我的提现账号</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/safey.html">账户安全</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/recharge.html">账户充值</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;">VIP通道</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/src/main/pages/tovip.html">成为VIP</a></dd>
-                            <dd><a href="/src/main/pages/test.html">测试</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
+                            <dd><a href="/hello-ghpages/src/main/pages/test.html">测试</a></dd>
                         </dl>
                     </li>
                 </ul>
@@ -133,23 +133,23 @@
                 <div class="secondFloor">
                     <ul class="businessList">
                         <li style="width:24%;">
-                            <a href="/src/main/pages/adversting.html"><img src="/src/main/images/fb.png">发布活动</a>
+                            <a href="/hello-ghpages/src/main/pages/adversting.html"><img src="/hello-ghpages/src/main/images/fb.png">发布活动</a>
                         </li>
                         <li style="width:24%;margin-left: 11px;">
-                            <a href="/src/main/pages/management.html"><img src="/src/main/images/bd.png">绑定店铺</a>
+                            <a href="/hello-ghpages/src/main/pages/management.html"><img src="/hello-ghpages/src/main/images/bd.png">绑定店铺</a>
                         </li>
                         <li style="width:24%;margin-left: 11px;">
-                            <a><img src="/src/main/images/ll.png">折多多客户</a>
+                            <a><img src="/hello-ghpages/src/main/images/ll.png">折多多客户</a>
                         </li>
                         <li style="width:24%;margin-left: 11px;">
-                            <a><img src="/src/main/images/dd.png">订单比对</a>
+                            <a><img src="/hello-ghpages/src/main/images/dd.png">订单比对</a>
                         </li>
                     </ul>
                 </div>
 
                 <div class="thirdFloor">
                     <div class="taobao">
-                        <img src="/src/main/images/tbrk.jpg" class="taobaoImg">
+                        <img src="/hello-ghpages/src/main/images/tbrk.jpg" class="taobaoImg">
                         <ul>
                             <li style="width: 33%;"><a>待支付</a></li>
                             <li style="width: 33%;margin-left: 8px;"><a>进行中</a></li>
@@ -157,7 +157,7 @@
                         </ul>
                     </div>
                     <div class="jingdong">
-                        <img src="/src/main/images/jdrk%20.jpg" class="jingD">
+                        <img src="/hello-ghpages/src/main/images/jdrk%20.jpg" class="jingD">
                         <ul>
                             <li style="width: 33%;"><a>待支付</a></li>
                             <li style="width: 33%;margin-left: 8px;"><a>进行中</a></li>
@@ -202,15 +202,15 @@
     })
 
     function tobeVip() {
-        window.location.href = "/src/main/pages/tovip.html";
+        window.location.href = "/hello-ghpages/src/main/pages/tovip.html";
     }
 
     function toRecharge() {
-        window.location.href = "/src/main/pages/recharge.html";
+        window.location.href = "/hello-ghpages/src/main/pages/recharge.html";
     }
 
     function toPutforward() {
-        window.location.href = "/src/main/pages/putforward.html";
+        window.location.href = "/hello-ghpages/src/main/pages/putforward.html";
     }
 </script>
 
