--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <meta name="Keywords" content="折多多,折多多官方app下载,折多多APP">
     <meta name="Description" content="折多多官方APP：3000多万人都在用的网购省钱工具。消费有收益，创业大平台，折多多邀请码:15515500039，注册自动升级超级会员，快来加入到折多多大家庭吧！">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link rel="stylesheet" href="src/main/css/bootstrap.min.css">
-    <link rel="stylesheet" href="src/main/css/owl.carousel.css">
-    <link rel="stylesheet" href="src/main/css/main.css">
-    <link rel="stylesheet" href="src/main/css/responsive.css">
-    <link rel="stylesheet" href="src/main/css/register.css">
-    <link rel="stylesheet" href="src/main/css/login.css">
-    <link rel="stylesheet" href="src/main/layui/css/layui.css">
-    <link rel="stylesheet" href="src/main/css/person.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/owl.carousel.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/responsive.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/register.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/login.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
+    <link rel="stylesheet" href="/hello-ghpages/src/main/css/person.css">
 </head>
 
 <body>
 
     <div class="banner" role="banner">
         <header id="header">
-            <div class="header-content clearfix"><a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
+            <div class="header-content clearfix">
+                <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
                         <li><a onclick="firstPage()" title="折多多">首页</a></li>
@@ -42,20 +43,28 @@
         </header>
 
         <div id="banner" class="container">
-            <div class="col-md-5 col-sm-12"> <a href="/app" target="_blank"><img class="banner-img img-responsive" src="http://p8zxgltyx.bkt.clouddn.com/images/app-screen.png?9032" title="微信扫一扫，下载折多多"></a> </div>
+            <div class="col-md-5 col-sm-12">
+                <a href="/app" target="_blank"><img class="banner-img img-responsive" src="http://p8zxgltyx.bkt.clouddn.com/images/app-screen.png?9032" title="微信扫一扫，下载折多多"></a>
+            </div>
             <div class="col-md-7 col-sm-12">
                 <div class="banner-text">
                     <h1>折多多</h1>
-                    <h2>汇聚全网优惠券<br>少花钱，多生钱<br>每天都是双十一<h2>
-                            <p><B>折多多邀请码：15515500039<br>注册自动升级超级会员<br>立即登陆APP，领取新人免单福利</B></p>
-                            <div class="banner-btn"><a href="https://itunes.apple.com/cn/app/%E8%8A%B1%E7%94%9F%E6%97%A5%E8%AE%B0%E7%84%95%E6%96%B0%E7%89%88/id1390240947?mt=8" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btn.png"></a> <a href="http://android.myapp.com/myapp/detail.htm?apkName=com.jf.lkrj&ADTAG=mobile" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btna.png?07281"></a> </div>
+                    <h2>汇聚全网优惠券<br>少花钱，多生钱<br>每天都是双十一
+                        <h2>
+                            <p>
+                                <B>折多多邀请码：15515500039<br>注册自动升级超级会员<br>立即登陆APP，领取新人免单福利</B>
+                            </p>
+                            <div class="banner-btn">
+                                <a href="https://itunes.apple.com/cn/app/%E8%8A%B1%E7%94%9F%E6%97%A5%E8%AE%B0%E7%84%95%E6%96%B0%E7%89%88/id1390240947?mt=8" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btn.png"></a>
+                                <a href="http://android.myapp.com/myapp/detail.htm?apkName=com.jf.lkrj&ADTAG=mobile" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btna.png?07281"></a>
+                            </div>
                 </div>
             </div>
         </div>
 
         <div style="height: 200px"></div>
     </div>
-    
+
     <div style="height: 170px"></div>
 
     <div class="copyrights"><a href="http://hsrj.co/">折多多</a></div>
@@ -152,14 +161,14 @@
                 <div class="col-md-6">
                     <div class="features2-content">
                         <h2 class="section-title">怎么用<span>折多多创业</span></h2>
-                        <p>人们生活离不开购物，购物大部分人选择网购，<br>
-                            通过折多多网购能更实惠。<br>
-                            有了这么大的用户群体，<br>
-                            折多多依托自身技术优势，为你搭建理想的创业平台！<br>
-                            零投资！零囤货！低门槛！不伤人脉！长久受益！<br><br>
-                            如果你是【超级会员】，别人通过你的链接购物<br>或邀请别人注册为你的粉丝后购物，得到消费收益。<br>
-                            假如你想把花生当成一份事业来做，升级成为【运营商】，能为你带来更大财富。<br>
-                            折多多坚持就等于成功！<br>
+                        <p>人们生活离不开购物，购物大部分人选择网购，<br> 通过折多多网购能更实惠。
+                            <br> 有了这么大的用户群体，
+                            <br> 折多多依托自身技术优势，为你搭建理想的创业平台！
+                            <br> 零投资！零囤货！低门槛！不伤人脉！长久受益！
+                            <br><br> 如果你是【超级会员】，别人通过你的链接购物
+                            <br>或邀请别人注册为你的粉丝后购物，得到消费收益。<br> 假如你想把花生当成一份事业来做，升级成为【运营商】，能为你带来更大财富。
+                            <br> 折多多坚持就等于成功！
+                            <br>
                         </p>
                     </div>
                 </div>
@@ -248,7 +257,11 @@
                 <div class="col-md-8 col-md-offset-2 text-center">
                     <h2><span>折多多官方app下载</span></h2>
                     <p>*使用邀请码【155155 00039】获取 APP 超级会员资格*</p>
-                    <div class="banner-btn"><a href="https://itunes.apple.com/cn/app/%E8%8A%B1%E7%94%9F%E6%97%A5%E8%AE%B0%E7%84%95%E6%96%B0%E7%89%88/id1390240947?mt=8" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btn.png" alt="苹果商店官网下载"></a><a href="/app" target="_blank"><img src="down.png?0821" alt="花生日记下载" title="点击下载APP" width="168"></a><a href="http://android.myapp.com/myapp/detail.htm?apkName=com.jf.lkrj&ADTAG=mobile" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btna.png?07281" alt="应用宝官网下载"></a> </div>
+                    <div class="banner-btn">
+                        <a href="https://itunes.apple.com/cn/app/%E8%8A%B1%E7%94%9F%E6%97%A5%E8%AE%B0%E7%84%95%E6%96%B0%E7%89%88/id1390240947?mt=8" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btn.png" alt="苹果商店官网下载"></a>
+                        <a href="/app" target="_blank"><img src="down.png?0821" alt="花生日记下载" title="点击下载APP" width="168"></a>
+                        <a href="http://android.myapp.com/myapp/detail.htm?apkName=com.jf.lkrj&ADTAG=mobile" rel="nofollow" target="_blank"><img src="http://p8zxgltyx.bkt.clouddn.com/images/apple-store-btna.png?07281" alt="应用宝官网下载"></a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -264,11 +277,11 @@
             </div>
         </div>
     </div>
-    <script src="src/main/js/jquery.min.js"></script>
-    <script src="src/main/layui/layui.js"></script>
-    <script src="src/main/js/fancybox.pack.js"></script>
-    <script src="src/main/js/carousel.min.js"></script>
-    <script src="src/main/js/main.js"></script>
+    <script src="/hello-ghpages/src/main/js/jquery.min.js"></script>
+    <script src="/hello-ghpages/src/main/layui/layui.js"></script>
+    <script src="/hello-ghpages/src/main/js/fancybox.pack.js"></script>
+    <script src="/hello-ghpages/src/main/js/carousel.min.js"></script>
+    <script src="/hello-ghpages/src/main/js/main.js"></script>
     <script type="text/javascript">
         var wdwidth = $(document).width()
         if (wdwidth > 769) {
@@ -280,11 +293,11 @@
         }
 
         function toregister() {
-            window.location.href="/src/main/pages/register.html";
+            window.location.href = "/hello-ghpages/src/main/pages/register.html";
         }
 
         function tologin() {
-          window.location.href="/src/main/pages/login.html";
+            window.location.href = "/hello-ghpages/src/main/pages/login.html";
         }
 
         function firstPage() {
@@ -306,7 +319,7 @@
         }
 
         function registering() {
-           window
+            window
         }
 
         function login() {
@@ -317,7 +330,7 @@
                 var layer = layui.layer;
                 layer.msg('登陆成功');
             });
-            window.location.href = "src/main/pages/person.html";
+            window.location.href = "/hello-ghpagessrc/main/pages/person.html";
             layui.use('element', function() {
                 var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
                 //监听导航点击
@@ -328,7 +341,6 @@
             });
             // }
         }
-
     </script>
     <div style="display:none">
         <script>
@@ -339,7 +351,6 @@
                 var s = document.getElementsByTagName("script")[0];
                 s.parentNode.insertBefore(hm, s);
             })();
-
         </script>
     </div>
 </body>
