--- a/src/main/pages/activities.html
+++ b/src/main/pages/activities.html
@@ -48,6 +48,9 @@
         cursor: pointer
     }
 </style>
+<script>
+    $('select').selectbox();
+</script>
 
 <body>
 
@@ -352,7 +355,7 @@
     start();
 
     function start() {
-        $('select').selectbox();
+        // $('select').selectbox();
         layui.use('element', function() {
             var element = layui.element; //导航的hover效果、二级菜单等功能，需要依赖element模块
             //监听导航点击
