--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -33,7 +33,7 @@
     <div class="banner" role="banner">
         <header id="header">
             <div class="header-content clearfix">
-                <a class="logo" href="http://hsrj.co"><img src="http://p8zxgltyx.bkt.clouddn.com/images/logo.png" alt="折多多" title="折多多"></a>
+                <a class="logo" href=""><img src="" alt="折多多" title="折多多"></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
                         <li><a href="/hello-ghpages/index.html" onclick="firstPage()" title="折多多">首页</a></li>
