--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -118,7 +118,8 @@
                             </div>
                             <div class="balance_down">
                                 <button onclick="toRecharge()">充值</button>
-                                <p><span onclick="toPutforward()">账户明细</span>|<span onclick="toPutforward()">提现</span></p>
+                                <p><span style="margin-right: 5px;font-size: 10px;cursor: pointer;" onclick="toPutforward()">账户明细</span>|<span style="font-size: 10px;margin-left: 5px;
+                                    cursor: pointer;" onclick="toPutforward()">提现</span></p>
                             </div>
                         </div>
                         <div class="personMsg">
