--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>折多多</title>
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
@@ -90,7 +90,6 @@
                         <a href="javascript:;">VIP通道</a>
                         <dl class="layui-nav-child">
                             <dd><a href="/hello-ghpages/src/main/pages/tovip.html">成为VIP</a></dd>
-                            <dd><a href="/hello-ghpages/src/main/pages/test.html">测试</a></dd>
                         </dl>
                     </li>
                 </ul>
