--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no" />
     <title>折多多</title>
     <link rel="stylesheet" href="/hello-ghpages/src/main/css/main.css">
     <link rel="stylesheet" href="/hello-ghpages/src/main/layui/css/layui.css">
