--- a/src/main/pages/person.html
+++ b/src/main/pages/person.html
@@ -217,4 +217,4 @@
 </script>
 
 </html>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1,initial-scale=1,user-scalable=no" />
